--- a/template/default/form/item.html
+++ b/template/default/form/item.html
@@ -1,9 +1,9 @@
-<div class="col-sm-<{$item_col}>">
+<div class="col-md-<{$item_col}>">
     <div class="form-group">
-        <label for="<{$id}>" class="col-sm-<{$width==0?'12':$width}> control-label">
+        <label for="<{$id}>" class="col-md-<{$width==0?'12':$width}> control-label">
             <{$title}>
         </label>
-        <div class="col-sm-<{$col_width}>">
+        <div class="col-md-<{$col_width}>">
             <{$content|raw}>
             <span class="help-<{$help_type|default=''}> text-info"><{$help}></span>
         </div>
