--- a/template/default/form/start.html
+++ b/template/default/form/start.html
@@ -1,1 +1,1 @@
-<form enctype="multipart/form-data" class="<{$class}>" role="form" id="<{$form_id}>" action="<{$action}>" method="<{$method}>"><div class="row">
+<form enctype="multipart/form-data" class="builder-create-form <{$class}>" role="form" id="<{$form_id}>" action="<{$action}>" method="<{$method}>"><div class="row">
