--- a/template/default/form/item.html
+++ b/template/default/form/item.html
@@ -1,11 +1,13 @@
 <div class="col-md-<{$item_col}>">
     <div class="form-group">
-        <label for="<{$id}>" class="col-md-<{$width==0?'12':$width}> control-label">
-            <{$title}>
-        </label>
-        <div class="col-md-<{$col_width}>">
-            <{$content|raw}>
-            <span class="help-<{$help_type|default=''}> text-info"><{$help}></span>
+        <div class="row">
+            <label for="<{$id}>" class="col-md-<{$width==0?'12':$width}> control-label text-right">
+                <{$title}>
+            </label>
+            <div class="col-md-<{$col_width}>">
+                <{$content|raw}>
+                <span class="help-<{$help_type|default=''}> text-info"><{$help}></span>
+            </div>
         </div>
     </div>
 </div>
