--- a/template/default/form/input-list.html
+++ b/template/default/form/input-list.html
@@ -27,7 +27,7 @@
         <{/if}>
     </div>
     <span class="form-json-group-add">
-         <button class="btn btn-success form-json-add" type="button">
+         <button class="btn btn-primary form-json-add" type="button">
                 <i class="fa fa-plus"></i>
                 <span>追加</span>
          </button>
