--- a/template/default/form/item.html
+++ b/template/default/form/item.html
@@ -1,7 +1,7 @@
 <div class="col-md-<{$item_col}>">
     <div class="form-group">
         <div class="row">
-            <label for="<{$id}>" class="col-md-<{$width==0?'12':$width}> control-label text-right">
+            <label for="<{$id}>" class="col-md-<{$width==0?'12':$width}> control-label">
                 <{$title}>
             </label>
             <div class="col-md-<{$col_width==0?'12':$col_width}>">
