--- a/template/default/form/password.html
+++ b/template/default/form/password.html
@@ -1,7 +1,7 @@
 <div class="input-group password-input">
     <input type="password" class="form-control" id="<{$id}>" name="<{$name}>" placeholder="<{$placeholder}>" value="<{$value}>" autocomplete="off">
     <span class="input-group-btn">
-          <span class="btn btn-success password-controller">
+          <span class="btn btn-primary password-controller">
               显示
           </span>
     </span>
