还在完善中

--- a/template/default/form/input-list.html
+++ b/template/default/form/input-list.html
@@ -1,25 +1,25 @@
 <div class="input-group form-json-group">
     <div class="form-json-group-demo">
-        <div class="form-json-item">
+        <div class="input-group form-json-item">
             <input type="text" name="<{$name}>[]" placeholder="<{$placeholder|default=''}>" class="form-control" disabled>
-            <span class="input-group-btn-fixed">
+            <span class="input-group-btn">
                  <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
             </span>
         </div>
     </div>
     <div class="form-json-group-core">
         <{if count($value) <1 }>
-        <div class="form-json-item">
+        <div class="input-group form-json-item">
             <input type="text" name="<{$name}>[]" placeholder="<{$placeholder|default=''}>" class="form-control">
-            <span class="input-group-btn-fixed">
+            <span class="input-group-btn">
                  <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
             </span>
         </div>
         <{else/}>
         <{foreach $value as $k=>$v}>
-        <div class="form-json-item">
+        <div class="input-group form-json-item">
             <input type="text" name="<{$name}>[]" placeholder="<{$placeholder|default=''}>" class="form-control" value="<{$v}>">
-            <span class="input-group-btn-fixed">
+            <span class="input-group-btn">
                  <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
             </span>
         </div>
@@ -28,8 +28,7 @@
     </div>
     <span class="form-json-group-add">
          <button class="btn btn-primary form-json-add" type="button">
-                <i class="fa fa-plus"></i>
-                <span>追加</span>
+              追加
          </button>
     </span>
 </div>
