--- a/template/default/form/textarea-list.html
+++ b/template/default/form/textarea-list.html
@@ -3,7 +3,7 @@
         <div class="form-json-item">
             <pre style="display:block;width:100%;padding: 0;margin: 0;background: none;border: 0;"><textarea class="form-control" name="<{$name}>[]" rows="<{$rows}>" placeholder="<{$placeholder}>" disabled></textarea></pre>
             <span class="input-group-btn-fixed">
-                <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
+                <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
     </div>
@@ -12,7 +12,7 @@
         <div class="form-json-item">
             <pre style="display:block;width:100%;padding: 0;margin: 0;background: none;border: 0;"><textarea class="form-control" name="<{$name}>[]" rows="<{$rows}>" placeholder="<{$placeholder}>"></textarea></pre>
             <span class="input-group-btn-fixed">
-                <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
+                <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
         <{else/}>
@@ -20,7 +20,7 @@
         <div class="form-json-item">
             <pre style="display:block;width:100%;padding: 0;margin: 0;background: none;border: 0;"><textarea class="form-control" name="<{$name}>[]" rows="<{$rows}>" placeholder="<{$placeholder}>"><{$v}></textarea></pre>
             <span class="input-group-btn-fixed">
-                <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
+                <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
         <{/foreach}>
