--- a/template/default/form/input-list.html
+++ b/template/default/form/input-list.html
@@ -2,8 +2,8 @@
     <div class="form-json-group-demo">
         <div class="input-group form-json-item">
             <input type="text" name="<{$name}>[]" placeholder="<{$placeholder|default=''}>" class="form-control" disabled>
-            <span class="input-group-btn">
-                 <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
+            <span class="input-group-btn input-group-append">
+                 <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
     </div>
@@ -11,16 +11,16 @@
         <{if count($value) <1 }>
         <div class="input-group form-json-item">
             <input type="text" name="<{$name}>[]" placeholder="<{$placeholder|default=''}>" class="form-control">
-            <span class="input-group-btn">
-                 <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
+            <span class="input-group-btn input-group-append">
+                 <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
         <{else/}>
         <{foreach $value as $k=>$v}>
         <div class="input-group form-json-item">
             <input type="text" name="<{$name}>[]" placeholder="<{$placeholder|default=''}>" class="form-control" value="<{$v}>">
-            <span class="input-group-btn">
-                 <button class="btn btn-danger form-json-delete" type="button">&nbsp;-&nbsp;</button>
+            <span class="input-group-btn input-group-append">
+                 <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
         <{/foreach}>
