--- a/template/default/form/date-range.html
+++ b/template/default/form/date-range.html
@@ -1,6 +1,6 @@
-<input type="text" class="form-control daterangepicker-input" id="<{$id}>" name="<{$name}>" placeholder="<{$placeholder}>" value="<{$value}>">
-<input type="hidden" name="build_form_type[<{$name}>]" value="date_range">
-<{:builder_event_listen($js_hook, function () use($form_id,$id,$value,$sTime,$eTime) {
+<input type="text" class="form-control daterangepicker-input" id="{{$id}}" name="{{$name}}" placeholder="{{$placeholder}}" value="{{$value}}">
+<input type="hidden" name="build_form_type[{{$name}}]" value="date_range">
+{{:builder_event_listen($js_hook, function () use($form_id,$id,$value,$sTime,$eTime) {
 return <<<EXO
 <script type="text/javascript">
     var _startDate = "{$sTime}";
@@ -13,4 +13,4 @@ return <<<EXO
     $('#{$form_id} #{$id}').daterangepicker(_dateRangepickerConfig);
 </script>
 EXO;
-})}>
+})}}
