--- a/template/default/form/end.html
+++ b/template/default/form/end.html
@@ -1,11 +1,11 @@
-<{if !empty($btn_footer)}>
+{{if !empty($btn_footer)}}
 <div class="col-sm-12">
     <div class="form-group form-footer">
         <div class="col-sm-12 text-right">
-            <{$btn_footer}>
+            {{$btn_footer}}
         </div>
     </div>
 </div>
-<{/if}>
+{{/if}}
 </div>
 </form>
