--- a/template/default/form/hidden.html
+++ b/template/default/form/hidden.html
@@ -1,2 +1,2 @@
-<input type="hidden" id="<{$id}>" name="<{$name}>" value="<{$value}>">
-<input type="hidden" name="build_form_type[<{$name}>]" value="hidden">
+<input type="hidden" id="{{$id}}" name="{{$name}}" value="{{$value}}">
+<input type="hidden" name="build_form_type[{{$name}}]" value="hidden">
