--- a/template/default/form/input.html
+++ b/template/default/form/input.html
@@ -1,2 +1,2 @@
-<input type="text" class="form-control" id="<{$id}>" name="<{$name}>" placeholder="<{$placeholder}>" value="<{$value}>">
-<input type="hidden" name="build_form_type[<{$name}>]" value="text">
+<input type="text" class="form-control" id="{{$id}}" name="{{$name}}" placeholder="{{$placeholder}}" value="{{$value}}">
+<input type="hidden" name="build_form_type[{{$name}}]" value="text">
