--- a/template/default/form/item.html
+++ b/template/default/form/item.html
@@ -1,12 +1,12 @@
-<div class="col-md-<{$item_col}>">
+<div class="col-md-{{$item_col}}">
     <div class="form-group">
         <div class="row">
-            <label for="<{$id}>" class="col-md-<{$width==0?'12':$width}> control-label">
-                <{$title}>
+            <label for="{{$id}}" class="col-md-{{$width==0?'12':$width}} control-label">
+                {{$title}}
             </label>
-            <div class="col-md-<{$col_width==0?'12':$col_width}>">
-                <{$content|raw}>
-                <span class="help-<{$help_type|default=''}> text-info"><{$help}></span>
+            <div class="col-md-{{$col_width==0?'12':$col_width}}">
+                {{$content|raw}}
+                <span class="help-{{$help_type|default=''}} text-info">{{$help}}</span>
             </div>
         </div>
     </div>
