--- a/template/default/form/json.html
+++ b/template/default/form/json.html
@@ -2,50 +2,50 @@
     <div class="form-json-group-demo">
         <div class="input-group form-json-item">
             <span class="input-group-btn input-group-prepend">
-		        <button class="btn btn-info" type="button"><{$keyName}></button>
+		        <button class="btn btn-info" type="button">{{$keyName}}</button>
             </span>
-            <input type="text" name="<{$name}>[json_key][]" placeholder="<{$keyName}>" class="form-control" disabled>
+            <input type="text" name="{{$name}}[json_key][]" placeholder="{{$keyName}}" class="form-control" disabled>
             <span class="input-group-btn input-group-prepend input-group-append">
-                <button class="btn btn-info" type="button"><{$valueName}></button>
+                <button class="btn btn-info" type="button">{{$valueName}}</button>
             </span>
-            <input type="text" name="<{$name}>[json_value][]" placeholder="<{$valueName}>" class="form-control" disabled>
+            <input type="text" name="{{$name}}[json_value][]" placeholder="{{$valueName}}" class="form-control" disabled>
             <span class="input-group-btn input-group-append">
                 <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
     </div>
     <div class="form-json-group-core">
-        <{if count($value) <1 }>
+        {{if count($value) <1 }}
         <div class="input-group form-json-item">
             <span class="input-group-btn input-group-prepend">
-	        	<button class="btn btn-info" type="button"><{$keyName}></button>
+	        	<button class="btn btn-info" type="button">{{$keyName}}</button>
             </span>
-            <input type="text" name="<{$name}>[json_key][]" placeholder="<{$keyName}>" class="form-control">
+            <input type="text" name="{{$name}}[json_key][]" placeholder="{{$keyName}}" class="form-control">
             <span class="input-group-btn input-group-prepend input-group-append">
-                 <button class="btn btn-info" type="button"><{$valueName}></button>
+                 <button class="btn btn-info" type="button">{{$valueName}}</button>
             </span>
-            <input type="text" name="<{$name}>[json_value][]" placeholder="<{$valueName}>" class="form-control">
+            <input type="text" name="{{$name}}[json_value][]" placeholder="{{$valueName}}" class="form-control">
             <span class="input-group-btn input-group-append">
                 <button class="btn btn-danger form-json-delete" type="button">&times;</button>
             </span>
         </div>
-        <{else/}>
-        <{foreach $value as $k=>$v}>
+        {{else/}}
+        {{foreach $value as $k=>$v}}
         <div class="input-group form-json-item">
             <span class="input-group-btn input-group-prepend">
-	        	<button class="btn btn-info" type="button"><{$keyName}></button>
+	        	<button class="btn btn-info" type="button">{{$keyName}}</button>
             </span>
-            <input type="text" name="<{$name}>[json_key][]" placeholder="<{$keyName}>" class="form-control" value="<{$k}>">
+            <input type="text" name="{{$name}}[json_key][]" placeholder="{{$keyName}}" class="form-control" value="{{$k}}">
             <span class="input-group-btn input-group-prepend input-group-append">
-                 <button class="btn btn-info" type="button"><{$valueName}></button>
+                 <button class="btn btn-info" type="button">{{$valueName}}</button>
             </span>
-            <input type="text" name="<{$name}>[json_value][]" placeholder="<{$valueName}>" class="form-control" value="<{$v}>">
+            <input type="text" name="{{$name}}[json_value][]" placeholder="{{$valueName}}" class="form-control" value="{{$v}}">
             <span class="input-group-btn input-group-append">
             <button class="btn btn-danger form-json-delete" type="button">&times;</button>
         </span>
         </div>
-        <{/foreach}>
-        <{/if}>
+        {{/foreach}}
+        {{/if}}
     </div>
     <span class="form-json-group-add">
          <button class="btn btn-primary form-json-add" type="button">
@@ -53,4 +53,4 @@
          </button>
     </span>
 </div>
-<input type="hidden" name="build_form_type[<{$name}>]" value="json">
+<input type="hidden" name="build_form_type[{{$name}}]" value="json">
