--- a/template/default/form/validate.html
+++ b/template/default/form/validate.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     (function ($) {
-        var formId = '#<{$form_id}>';
+        var formId = '#{{$form_id}}';
         var validate_config = {};
         validate_config.message = '表单验证未通过';
         validate_config.feedbackIcons = {
@@ -8,7 +8,7 @@
             invalid: 'fa fa-times',
             validating: 'fa fa-refresh'
         };
-        var validate_config_fields = '<{$validate_config|default=\'{}\'}>';
+        var validate_config_fields = '{{$validate_config|default=\'{}\'}}';
         validate_config.fields = eval('(' + validate_config_fields + ')');
         $(document).ready(function () {
             $(formId).bootstrapValidator(validate_config).on('success.form.bv', function (e) {
@@ -22,7 +22,7 @@
                 var formData = form.serialize();
                 $.ajax({
                     url: form.attr('action'),
-                    type: '<{$method}>',
+                    type: '{{$method}}',
                     data: formData,
                     dataType: 'json',
                     success: function (re) {
@@ -30,7 +30,7 @@
                             $(formId)[0].reset();
                             $(formId).bootstrapValidator('resetForm');
                             alertNotify(re.msg, 'success');
-                            var redirectUrl = '<{$redirect_url}>';
+                            var redirectUrl = '{{$redirect_url}}';
                             redirectUrl = (redirectUrl === '') ? re.url : redirectUrl;
                             if (typeof redirectUrl !== 'undefined' && redirectUrl !== '') {
                                 setTimeout(function () {
